change build setting